--- a/package.json
+++ b/package.json
@@ -9,20 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.6",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "framer-motion": "^10.12.16",
+    "lucide-react": "^0.438.0",
     "next": "13.4.5",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/three": "^0.168.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
