--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/dom": "^10.18.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.6",
