--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@motionone/dom": "^10.18.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@react-three/drei": "^9.112.0",
-    "@react-three/fiber": "^8.17.6",
     "@studio-freight/react-lenis": "^0.0.47",
     "@types/node": "20.3.0",
     "@types/react": "19.0.8",
@@ -22,9 +20,11 @@
     "eslint": "8.42.0",
     "eslint-config-next": "15.1.6",
     "framer-motion": "^10.12.16",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.438.0",
     "next": "15.1.6",
     "next-themes": "^0.3.0",
+    "ogl": "^1.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icon-cloud": "^4.1.4",
